--- a/homepage.html
+++ b/homepage.html
@@ -498,7 +498,7 @@
 
 <body>
   <div class='nav-bar' id='nav-bar1'>
-    <img src='Bookit.png' alt="Bookit" id='logo'>
+    <img src='./Bookit.png' alt="Bookit" id='logo'>
     <input type='text' placeholder="Search for movies, sports, events, shows and More" id='Search'>
     <button id='Search-button'><i class="material-icons-outlined" id='mag'>search</i><span
         id='search-text'>Search</span></button>
@@ -563,9 +563,9 @@
   </script>
   <div class='carousel'>
     <!-- <button id ='prev' onclick = "prevslide()"><span class="material-icons-outlined">arrow_back_ios</span></button> -->
-    <img src='sidconcertr.jpg' id='s1'>
-    <img src='rcb vs  mir.png' id='s2'>
-    <img src='sa_aravindr.jpg' id='s3'>
+    <img src='./sidconcertr.jpg' id='s1'>
+    <img src='./rcb vs  mir.png' id='s2'>
+    <img src='./sa_aravindr.jpg' id='s3'>
     <!-- <button id = 'next' onclick = "nextslide()"><span class="material-icons-outlined">arrow_forward_ios</span></button> -->
   </div>
   <div class="BookIt_Exclusive">
@@ -577,7 +577,7 @@
         <table id='BE1'>
           <caption style='caption-side:bottom;'>Godzilla vs Kong</caption>
           <tr>
-            <td><img src='godzilla vs kong.jpg' alt="godzilla vs kong" class='raise-on-hover Cards'></td>
+            <td><img src='./godzilla vs kong.jpg' alt="godzilla vs kong" class='raise-on-hover Cards'></td>
           </tr>
         </table>
       </a>
@@ -585,7 +585,7 @@
         <table id='BE2'>
           <caption style='caption-side:bottom;'>Justice League</caption>
           <tr>
-            <td><img src='justice league.jpg' alt="justice league" class='raise-on-hover Cards'></td>
+            <td><img src='./justice league.jpg' alt="justice league" class='raise-on-hover Cards'></td>
           </tr>
         </table>
       </a>
@@ -593,7 +593,7 @@
         <table id='BE3'>
           <caption style='caption-side:bottom;'>Alex in the wonderland</caption>
           <tr>
-            <td><img src='alexwl.jpg' alt="Alex in the wonderland" class='raise-on-hover Cards'></td>
+            <td><img src='./alexwl.jpg' alt="Alex in the wonderland" class='raise-on-hover Cards'></td>
           </tr>
         </table>
       </a>
@@ -601,7 +601,7 @@
         <table id='BE4'>
           <caption style='caption-side:bottom;'>Sports Fest</caption>
           <tr>
-            <td><img src='sportsev.jpg' alt="sports Fest" class='raise-on-hover Cards'></td>
+            <td><img src='./sportsev.jpg' alt="sports Fest" class='raise-on-hover Cards'></td>
           </tr>
         </table>
       </a>
@@ -616,7 +616,7 @@
         <table id='KC1'>
           <caption style='caption-side:bottom;'>Food Fest</caption>
           <tr>
-            <td><img src='Food_Fest.jpg' alt="Food_Fest" class='raise-on-hover Cards'></td>
+            <td><img src='./Food_Fest.jpg' alt="Food_Fest" class='raise-on-hover Cards'></td>
           </tr>
         </table>
       </a>
@@ -624,7 +624,7 @@
         <table id='KC2'>
           <caption style='caption-side:bottom;'>Summer Stories</caption>
           <tr>
-            <td><img src='summer_stories.jpg' alt="Summer stories" class='raise-on-hover Cards'></td>
+            <td><img src='./summer_stories.jpg' alt="Summer stories" class='raise-on-hover Cards'></td>
           </tr>
         </table>
       </a>
@@ -632,7 +632,7 @@
         <table id='KC3'>
           <caption style='caption-side:bottom;'>Doodle</caption>
           <tr>
-            <td><img src='doodle.jpg' alt="doodle" class='raise-on-hover Cards'></td>
+            <td><img src='./doodle.jpg' alt="doodle" class='raise-on-hover Cards'></td>
           </tr>
         </table>
       </a>
@@ -640,7 +640,7 @@
         <table id='KC4'>
           <caption style='caption-side:bottom;'>Acting</caption>
           <tr>
-            <td><img src='acting.jpg' alt="acting" class='raise-on-hover Cards'></td>
+            <td><img src='./acting.jpg' alt="acting" class='raise-on-hover Cards'></td>
           </tr>
         </table>
       </a>
@@ -655,7 +655,7 @@
         <table id='LOL1'>
           <caption style='caption-side:bottom;'>Alex In Wonderland</caption>
           <tr>
-            <td><img src='alexwl.jpg' alt="Alex In Wonderland" class='raise-on-hover Cards'></td>
+            <td><img src='./alexwl.jpg' alt="Alex In Wonderland" class='raise-on-hover Cards'></td>
           </tr>
         </table>
       </a>
@@ -663,7 +663,7 @@
         <table id='LOL2'>
           <caption style='caption-side:bottom;'>SA Aravind</caption>
           <tr>
-            <td><img src='sacard.jpg' alt="SA Aravind" class='raise-on-hover Cards'></td>
+            <td><img src='./sacard.jpg' alt="SA Aravind" class='raise-on-hover Cards'></td>
           </tr>
         </table>
       </a>
@@ -671,7 +671,7 @@
         <table id='LOL3'>
           <caption style='caption-side:bottom;'>Kenny Sebastin</caption>
           <tr>
-            <td><img src='kenny.jpg' alt="Kenny Sebastin" class='raise-on-hover Cards'></td>
+            <td><img src='./kenny.jpg' alt="Kenny Sebastin" class='raise-on-hover Cards'></td>
           </tr>
         </table>
       </a>
@@ -679,7 +679,7 @@
         <table id='LOL4'>
           <caption style='caption-side:bottom;'>Vada Poche</caption>
           <tr>
-            <td><img src='vada poche.jpg' alt="Vada Poche" class='raise-on-hover Cards'></td>
+            <td><img src='./vada poche.jpg' alt="Vada Poche" class='raise-on-hover Cards'></td>
           </tr>
         </table>
       </a>
