--- a/theatre.html
+++ b/theatre.html
@@ -457,7 +457,7 @@
         }
     </script>
     <div class='nav-bar' id='nav-bar1'>
-        <a href = '/homepage.html' style = 'color: white; text-decoration: none; cursor: pointer'><img src = 'Bookit.png' alt="Bookit" id='logo'></a>
+        <a href = '/homepage.html' style = 'color: white; text-decoration: none; cursor: pointer'><img src = './Bookit.png' alt="Bookit" id='logo'></a>
         <input type='text' placeholder="Search for movies, sports, events, shows and More" id='Search'>
         <button id='Search-button'><i class="material-icons-outlined" id='mag'>search</i><span
                 id='search-text'>Search</span></button>
@@ -493,7 +493,7 @@
         <div class="info-align">
             <div class="mov-img">
                 <a href="#"><img
-                        src="Karnan.jpg"></a>
+                        src="./Karnan.jpg"></a>
             </div>
             <div class="mov-synopsis">
                 <p>Karnan (U/A) - Tamil<br>
@@ -522,7 +522,7 @@
         <hr>
         <div class="fac-list">
             <input id="opt1" type="search" placeholder="Search">
-            <img src="search.png">
+            <img src="./search.png">
 
             <select id="opt2">
                 <option>Experience</option>
