--- a/sign-in.html
+++ b/sign-in.html
@@ -13,9 +13,9 @@
     <div class="sign-in-form">
         <h2>Get started</h2>
         <form action="#">
-            <button id="fb">Continue with Facebook</button><img  id="fb-img" src="facebook.png">
-            <button id="google">Continue with google</button><img id="g-img" src="search.png">
-            <button id="mail">Continue with Email</button><img id="mail-img" src="mail.png">
+            <button id="fb">Continue with Facebook</button><img  id="fb-img" src="./facebook.png">
+            <button id="google">Continue with google</button><img id="g-img" src="./search.png">
+            <button id="mail">Continue with Email</button><img id="mail-img" src="./mail.png">
             
             <p class="or">OR</p>
             <input  id="ph-no" type="text"  placeholder="Continue with mobile number">
