--- a/booking.html
+++ b/booking.html
@@ -77,7 +77,7 @@
             /* margin-top: 2.5vh; */
             border-radius: 20px;
             appearance: none;
-            background-image: url('expand-more.png');
+            background-image: url('.//expand-more.png');
             background-repeat: no-repeat;
             background-position-x: 60px;
             background-position-y: 6px;
@@ -471,7 +471,7 @@
         }
     </script>
     <div class='nav-bar' id = 'nav-bar1'>
-        <a href = '/homepage.html' style = 'color: white; text-decoration: none; cursor: pointer'><img src = './Bookit.png' alt="Bookit" id='logo'></a>
+        <a href = '/homepage.html' style = 'color: white; text-decoration: none; cursor: pointer'><img src = '../Bookit.png' alt="Bookit" id='logo'></a>
         <input type='text' placeholder="Search for movies, sports, events, shows and More" id='Search'>
         <button id='Search-button'><i class="material-icons-outlined" id='mag'>search</i><span
                 id='search-text'>Search</span></button>
@@ -508,7 +508,7 @@
         }
     </script>
     <div id='movie'>
-        <img src='./Karnan.jpg' alt="godzilla vs kong" id='movie_pos'>
+        <img src='../Karnan.jpg' alt="godzilla vs kong" id='movie_pos'>
         <div id='description'>
             <h4 class='describe'>Karnan</h4>
             <h3 class='describe'><span>Theater: </span>Sathyam Cinemas Royapettah Chennai</h3>
