--- a/booking.html
+++ b/booking.html
@@ -77,7 +77,7 @@
             /* margin-top: 2.5vh; */
             border-radius: 20px;
             appearance: none;
-            background-image: url('.//expand-more.png');
+            background-image: url('../expand-more.png');
             background-repeat: no-repeat;
             background-position-x: 60px;
             background-position-y: 6px;
