--- a/movies.html
+++ b/movies.html
@@ -568,13 +568,13 @@
         <div class="slideshow-container">
 
             <div class="mySlides fade">
-                <img src="movie400.jpeg" style="width:100%">
+                <img src='movie400.jpeg' style="width:100%">
             </div>
             <div class="mySlides fade">
-                <img src="event400.jpg" style="width:100%">
+                <img src='event400.jpg' style="width:100%">
             </div>
             <div class="mySlides fade">
-                <img src="event400.jpg" style="width:100%">
+                <img src='event400.jpg' style="width:100%">
             </div>
         </div>
         <br>
@@ -632,28 +632,28 @@
         <div class="mov-list">
             <h1>MOVIES</h1>
             <div class='row1'>
-                <a href = 'theatre.html' style = 'color: white; text-decoration: none; cursor: pointer;'><a href = 'theatre.html' style = 'color: white; text-decoration: none; cursor: pointer;'><img src="godzilla vs kong.jpg" alt="" class='pos'></a></a>
-                <a href = 'theatre.html' style = 'color: white; text-decoration: none; cursor: pointer;'><img src="godzilla vs kong.jpg" alt="" class='pos'></a>
-                <a href = 'theatre.html' style = 'color: white; text-decoration: none; cursor: pointer;'><img src="godzilla vs kong.jpg" alt="" class='pos'></a>
-                <a href = 'theatre.html' style = 'color: white; text-decoration: none; cursor: pointer;'><img src="godzilla vs kong.jpg" alt="" class='pos'></a>
+                <a href = 'theatre.html' style = 'color: white; text-decoration: none; cursor: pointer;'><img src='godzilla vs kong.jpg' alt="" class='pos'></a>
+                <a href = 'theatre.html' style = 'color: white; text-decoration: none; cursor: pointer;'><img src='godzilla vs kong.jpg' alt="" class='pos'></a>
+                <a href = 'theatre.html' style = 'color: white; text-decoration: none; cursor: pointer;'><img src='godzilla vs kong.jpg' alt="" class='pos'></a>
+                <a href = 'theatre.html' style = 'color: white; text-decoration: none; cursor: pointer;'><img src='godzilla vs kong.jpg' alt="" class='pos'></a>
             </div>
             <div class="row2">
-                <a href = 'theatre.html' style = 'color: white; text-decoration: none; cursor: pointer;'><img src="godzilla vs kong.jpg" alt="" class='pos'></a>
-                <a href = 'theatre.html' style = 'color: white; text-decoration: none; cursor: pointer;'><img src="godzilla vs kong.jpg" alt="" class='pos'></a>
-                <a href = 'theatre.html' style = 'color: white; text-decoration: none; cursor: pointer;'><img src="godzilla vs kong.jpg" alt="" class='pos'></a>
-                <a href = 'theatre.html' style = 'color: white; text-decoration: none; cursor: pointer;'><img src="godzilla vs kong.jpg" alt="" class='pos'></a>
+                <a href = 'theatre.html' style = 'color: white; text-decoration: none; cursor: pointer;'><img src='godzilla vs kong.jpg' alt="" class='pos'></a>
+                <a href = 'theatre.html' style = 'color: white; text-decoration: none; cursor: pointer;'><img src='godzilla vs kong.jpg' alt="" class='pos'></a>
+                <a href = 'theatre.html' style = 'color: white; text-decoration: none; cursor: pointer;'><img src='godzilla vs kong.jpg' alt="" class='pos'></a>
+                <a href = 'theatre.html' style = 'color: white; text-decoration: none; cursor: pointer;'><img src='godzilla vs kong.jpg' alt="" class='pos'></a>
             </div>
             <div class="row3">
-                <a href = 'theatre.html' style = 'color: white; text-decoration: none; cursor: pointer;'><img src="godzilla vs kong.jpg" alt="" class='pos'></a>
-                <a href = 'theatre.html' style = 'color: white; text-decoration: none; cursor: pointer;'><img src="godzilla vs kong.jpg" alt="" class='pos'></a>
-                <a href = 'theatre.html' style = 'color: white; text-decoration: none; cursor: pointer;'><img src="godzilla vs kong.jpg" alt="" class='pos'></a>
-                <a href = 'theatre.html' style = 'color: white; text-decoration: none; cursor: pointer;'><img src="godzilla vs kong.jpg" alt="" class='pos'></a>
+                <a href = 'theatre.html' style = 'color: white; text-decoration: none; cursor: pointer;'><img src='godzilla vs kong.jpg' alt="" class='pos'></a>
+                <a href = 'theatre.html' style = 'color: white; text-decoration: none; cursor: pointer;'><img src='godzilla vs kong.jpg' alt="" class='pos'></a>
+                <a href = 'theatre.html' style = 'color: white; text-decoration: none; cursor: pointer;'><img src='godzilla vs kong.jpg' alt="" class='pos'></a>
+                <a href = 'theatre.html' style = 'color: white; text-decoration: none; cursor: pointer;'><img src='godzilla vs kong.jpg' alt="" class='pos'></a>
             </div>
             <div class="row4">
-                <a href = 'theatre.html' style = 'color: white; text-decoration: none; cursor: pointer;'><img src="godzilla vs kong.jpg" alt="" class='pos'></a>
-                <a href = 'theatre.html' style = 'color: white; text-decoration: none; cursor: pointer;'><img src="godzilla vs kong.jpg" alt="" class='pos'></a>
-                <a href = 'theatre.html' style = 'color: white; text-decoration: none; cursor: pointer;'><img src="godzilla vs kong.jpg" alt="" class='pos'></a>
-                <a href = 'theatre.html' style = 'color: white; text-decoration: none; cursor: pointer;'><img src="godzilla vs kong.jpg" alt="" class='pos'></a>
+                <a href = 'theatre.html' style = 'color: white; text-decoration: none; cursor: pointer;'><img src='godzilla vs kong.jpg' alt="" class='pos'></a>
+                <a href = 'theatre.html' style = 'color: white; text-decoration: none; cursor: pointer;'><img src='godzilla vs kong.jpg' alt="" class='pos'></a>
+                <a href = 'theatre.html' style = 'color: white; text-decoration: none; cursor: pointer;'><img src='godzilla vs kong.jpg' alt="" class='pos'></a>
+                <a href = 'theatre.html' style = 'color: white; text-decoration: none; cursor: pointer;'><img src='godzilla vs kong.jpg' alt="" class='pos'></a>
             </div>
         </div>
     </div>
