--- a/homepage.html
+++ b/homepage.html
@@ -516,17 +516,17 @@
       <option>Banglore</option>
       <option>Hyderabad</option>
     </select>
-    <button class='sign-in' id='sign-in-btn' onclick='redirect("/sign-in.html")'><span class="material-icons-outlined"
+    <button class='sign-in' id='sign-in-btn' onclick='redirect("sign-in.html")'><span class="material-icons-outlined"
         id='sign-in-icon'>
         account_circle
       </span><span id='sign-in-txt'>Sign In</span></button>
   </div>
   <div class='nav-bar-2'>
     <div class='links'>
-      <a href='\movies.html'>Movies</a>
-      <a href='\movies.html'>Sports</a>
-      <a href='\movies.html'>Events</a>
-      <a href='\movies.html'>Shows</a>
+      <a href='movies.html'>Movies</a>
+      <a href='movies.html'>Sports</a>
+      <a href='movies.html'>Events</a>
+      <a href='movies.html'>Shows</a>
     </div>
   </div>
   <script>
