--- a/booking.html
+++ b/booking.html
@@ -471,7 +471,7 @@
         }
     </script>
     <div class='nav-bar' id = 'nav-bar1'>
-        <a href = '/homepage.html' style = 'color: white; text-decoration: none; cursor: pointer'><img src = 'Bookit.png' alt="Bookit" id='logo'></a>
+        <a href = 'homepage.html' style = 'color: white; text-decoration: none; cursor: pointer'><img src = 'Bookit.png' alt="Bookit" id='logo'></a>
         <input type='text' placeholder="Search for movies, sports, events, shows and More" id='Search'>
         <button id='Search-button'><i class="material-icons-outlined" id='mag'>search</i><span
                 id='search-text'>Search</span></button>
@@ -504,7 +504,7 @@
     </div>
     <script>
         function layout() {
-            location.replace("\layout.html");
+            location.replace("layout.html");
         }
     </script>
     <div id='movie'>
