--- a/movies.html
+++ b/movies.html
@@ -532,7 +532,7 @@
         }
     </script>
     <div class='nav-bar' id='nav-bar1'>
-        <a href = '/homepage.html' style = 'color: white; text-decoration: none; cursor: pointer'><img src = 'Bookit.png' alt="Bookit" id='logo'></a>
+        <a href = 'homepage.html' style = 'color: white; text-decoration: none; cursor: pointer'><img src = 'Bookit.png' alt="Bookit" id='logo'></a>
         <input type='text' placeholder="Search for movies, sports, events, shows and More" id='Search'>
         <button id='Search-button'><i class="material-icons-outlined" id='mag'>search</i><span
                 id='search-text'>Search</span></button>
@@ -551,7 +551,7 @@
             <option>Banglore</option>
             <option>Hyderabad</option>
         </select>
-        <button class='sign-in' id='sign-in-btn' onclick='redirect("/sign-in.html")'><span
+        <button class='sign-in' id='sign-in-btn' onclick='redirect("sign-in.html")'><span
                 class="material-icons-outlined" id='sign-in-icon'>
                 account_circle
             </span><span id='sign-in-txt'>Sign In</span></button>
