--- a/theatre.html
+++ b/theatre.html
@@ -476,7 +476,7 @@
             <option>Banglore</option>
             <option>Hyderabad</option>
         </select>
-        <button class='sign-in' id='sign-in-btn' onclick='redirect("sign-in.html")'><span
+        <button class='sign-in' id='sign-in-btn' onclick='location.replace("sign-in.html")'><span
                 class="material-icons-outlined" id='sign-in-icon'>
                 account_circle
             </span><span id='sign-in-txt'>Sign In</span></button>
